--- a/capstone1/Dockerfile
+++ b/capstone1/Dockerfile
@@ -1,4 +1,6 @@
 FROM python:3.9-slim
+
+WORKDIR /capstone1
 RUN pip install keras_image_helper
 RUN pip install tflite-runtime
 
@@ -6,3 +8,6 @@ COPY model_0.936.tflite .
 COPY lambda_function.py .
 
 CMD [ "lambda_function.lambda_handler" ]
+
+# FROM ubuntu:latest
+# CMD echo "Hi, I'm inside"
