--- a/capstone1/Dockerfile
+++ b/capstone1/Dockerfile
@@ -1,13 +1,11 @@
-FROM python:3.9-slim
+FROM public.ecr.aws/lambda/python:3.8
 
-WORKDIR /capstone1
-RUN pip install keras_image_helper
-RUN pip install tflite-runtime
+RUN pip install keras-image-helper
+
+RUN pip install https://github.com/alexeygrigorev/tflite-aws-lambda/raw/main/tflite/tflite_runtime-2.7.0-cp38-cp38-linux_x86_64.whl
+# RUN pip install tflite-runtime
 
 COPY model_0.936.tflite .
 COPY lambda_function.py .
-
-CMD [ "lambda_function.lambda_handler" ]
-
-# FROM ubuntu:latest
-# CMD echo "Hi, I'm inside"
+COPY classes .
+CMD [ "lambda_function.handler" ]
